# sundog

./: .coveragerc  .gitattributes  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  towncrier.toml  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  make.bat
docs/source/: conf.py  exceptions.rst  history.rst  index.rst  sunspec.rst
src/sundog/: __init__.py  _version.py  client.py  exceptions.py  server.py
src/sundog/_tests/: conftest.py  test_client.py  test_server.py
