[tool.black]
target-version =  ['py36', 'py37', 'py38']
include = '''
^/(
    setup.py
    | src/sundog/.*\.pyi?
)$
'''
exclude = '''
^/(
    src/sundog/_version.py
    | versioneer.py
)$
'''

[build-system]
requires = [
    "setuptools >= 51.0.0",
    "wheel >= 0.36.2",
]
build-backend = "setuptools.build_meta"
