[metadata]
name = sundog
author = Kyle Altendorf
author_email = sda@fstab.net
license = MIT
description = Asynchronous SunSpec library using Trio
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
install_requires =
    async_generator ~=1.10
    attrs ~=20.3.0
    pymodbus @ https://github.com/altendky/pymodbus/archive/83bf25071bdf56ece257e2e113a63dccf6bd692a.zip
    # git+ gets us the models submodule, as opposed to .zip
    pysunspec2 @ git+https://github.com/sunspec/pysunspec2@d6023c394fa717913849c1f6ad7cab3ab7456c47
    trio-typing ~=0.5.0
include_package_data = True
zip_safe = False
package_dir = =src
packages = find:

[options.extras_require]
check =
    %(test)s
    black ==20.8b1
    mypy ~=0.790.0
dev =
    %(check)s
    %(test)s
    # version should be driven by compatibility with pyqt5 extra
    tox ~=3.20
docs =
    %(s_importlib_metadata)s
    sphinx ~=3.2
    sphinx-autodoc-typehints ~=1.11
    sphinx_rtd_theme ~=0.5.1
    sphinx-inline-tabs ~=2020.10.19b4
    sphinxcontrib-trio ~=1.1
    towncrier ==19.9.0rc1
test =
    coverage ~=5.3
    %(s_importlib_metadata)s
    importlib_resources ~=4.1
    pytest ~=6.2
    pytest-cov ~=2.10
    pytest-trio ~=0.7.0
all =
    %(check)s
    %(dev)s
    %(docs)s
    %(test)s
s_importlib_metadata =
    importlib_metadata ~=3.3

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/sundog/_version.py
versionfile_build = sundog/_version.py
tag_prefix = ''
